# CellSim

./: Cargo.toml  README.md
src/: cell.rs  lib.rs  main.rs  rules.rs  state.rs
