[package]
name = "cell_sim"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan McClement <j.mcclement@columbia.edu>"]
description = "A 1d cell automata simulator for the command line"

homepage = "https://github.com/mcclementines/cellsim"
repository = "https://github.com/mcclementines/cellsim"
readme = "README.md"
keywords = ["cell", "simulator", "automata"]
license = "MIT"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }

[[bin]]
name = "cellsim"
path = "src/main.rs"
